2012-09-18  Niibe Yutaka  <gniibe@fsij.org>

	* src/random.c (NUM_NOISE_INPUTS, REPITITION_COUNT_TEST_CUTOFF)
	(ADAPTIVE_PROPORTION_64_TEST_CUTOFF)
	(ADAPTIVE_PROPORTION_4096_TEST_CUTOFF): Change for draft SP 800-90b,
	the section 6.2 "Full Entropy Source Requirements".

2012-09-13  Niibe Yutaka  <gniibe@fsij.org>

	* src/aes-constant-ft.c: New (from Gnuk).

2012-09-12  Niibe Yutaka  <gniibe@fsij.org>

	* src/sha256.c, src/sha256.h: New (from Gnuk).

	* boards/STBEE/board.h (GPIOD_USB_ENABLE): Fix.

2012-09-11  Niibe Yutaka  <gniibe@fsij.org>

	Health tests (SP 800-90b).
	* src/random.c (repetition_count_test)
	(adaptive_proportion_64_test, adaptive_proportion_4096_test): New.

2012-09-10  Niibe Yutaka  <gniibe@fsij.org>

	* NEUG_USB_DEVICE_ID: New file.

	* src/main.c: Include usb-vid-pid-ver.c.inc and usb-strings.c.inc.

	* src/configure (vidpid): New.

2012-08-30  Niibe Yutaka  <gniibe@fsij.org>

	* Version 0.02.

2012-08-27  Niibe Yutaka  <gniibe@fsij.org>

	Use WELL random number generator to whiten noise input.
	* src/random.c (NUM_NOISE_INPUTS): Now, it's 6.
	(tmt_init, tmt_one_step, tmt_value): Remove.
	(well512a_step): New function.  WELL random number generator.
	(neug_prng_reseed): Remove.

	* src/main.c (main): Call neug_flash with time interval 2500ms,
	while disconnected.
	Don't call neug_prng_reseed.
	More blinks.

	* src/neug.h (NEUG_PRE_LOOP): It's 64 now (was: 32).

2012-08-13  Niibe Yutaka  <gniibe@fsij.org>

	* src/main.c (RANDOM_BYTES_LENGTH): It's now 60 (was: 32).
	(neug_device_reset, neug_ctrl_write_finish)
	(vcom_port_data_setup, neug_setup, neug_get_descriptor)
	(neug_setup_endpoints_for_interface, neug_usb_event)
	(neug_interface, Vector90, EP1_IN_Callback, EP2_IN_Callback)
	(EP3_OUT_Callback): New.
	(main): Now use usb_lld_* functions (was: ChibiOS SDU driver).

	* boards/*/board.c (USB_Cable_Config, set_led): Remove.
	, boards/*/board.h (SET_USB_CONDITION, SET_LED_CONDITION)
	(GPIO_USB, IOPORT_USB, GPIO_LED, IOPORT_LED): Define.
